fixed contrast ratio of elements

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 hr{
     margin-top:-15px;
     width:80%;
-    color: black;
+    color: brown;
 }
 .header{
     width:500px;
